[gd_scene load_steps=4 format=3 uid="uid://wan04g3gunep"]

[ext_resource type="Script" path="res://scripts/Stats/UserStats.gd" id="1_f1s5b"]
[ext_resource type="PackedScene" uid="uid://dt154ln4shap2" path="res://scenes/Misc/Portrait/PortraitDisplay.tscn" id="2_liugp"]
[ext_resource type="FontFile" uid="uid://dxul5lyctep67" path="res://fonts/Poppins-Bold.ttf" id="2_lmqng"]

[node name="UserStats" type="Control"]
layout_mode = 3
anchor_right = 0.906
anchor_bottom = 0.326
offset_right = -0.400016
offset_bottom = -0.200006
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1s5b")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.747
anchor_bottom = 1.0
offset_right = 0.194969
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MostChar1" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="MostStat1" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MostChar2" parent="HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="MostStat2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MostChar3" parent="HBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="MostStat3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MostChar4" parent="HBoxContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="MostStat4" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MostChar5" parent="HBoxContainer/VBoxContainer/HBoxContainer5" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="MostStat5" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="RecentChar1" parent="HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="RecentStat1" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="RecentChar2" parent="HBoxContainer/VBoxContainer2/HBoxContainer2" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="RecentStat2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="RecentChar3" parent="HBoxContainer/VBoxContainer2/HBoxContainer3" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="RecentStat3" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="RecentChar4" parent="HBoxContainer/VBoxContainer2/HBoxContainer4" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="RecentStat4" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="RecentChar5" parent="HBoxContainer/VBoxContainer2/HBoxContainer5" instance=ExtResource("2_liugp")]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2

[node name="RecentStat5" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lmqng")
theme_override_font_sizes/font_size = 15
text = "Picked NaN%
Win Rate NaN%"

[connection signal="_update_most_picks" from="." to="." method="_on_update_most_picks"]
[connection signal="_update_recent_picks" from="." to="." method="_on_update_recent_picks"]
